# packages/service1/src/api/model.ts
@@ -4,48 +4,50 @@ import mongoose from "mongoose";
 // type UserGroupDocument = User & Document;
 /**
  * @swagger
- * definitions:
- *      Provider:
- *          type: string
- *          default: local
- *          enum:
- *             - local
- *             - google
- *      Role:
- *          type: string
- *          enum: [editor, finance, admin, crm]
- *          default: admin
+ * components:
+ *   schemas:
+ *       Provider:
+ *           type: string
+ *           default: local
+ *           enum:
+ *              - local
+ *              - google
+ *              - github
+ *       Role:
+ *           type: string
+ *           enum: [editor, finance, admin, crm]
+ *           default: admin
  *
- *      User:
- *        properties:
- *          _id:
- *              type: string
- *          isActive:
- *              type: boolean
- *              default: true
- *          email:
- *              type: string
- *              required: true
- *          firstName:
- *              type: string
- *          lastName:
- *              type: string
- *          password:
- *              type: string
- *              required: true
- *          creditCardNumber:
- *              type: string
- *              default: ''
- *          provider:
- *              type: string
- *              schema:
- *                  $ref: '#/definitions/Provider'
- *          token:
- *              type: string
- *          role:
- *              type: string
- *              schema:
- *                  $ref: '#/definitions/Role'
+ *       User:
+ *         properties:
+ *           _id:
+ *               type: string
+ *           isActive:
+ *               type: boolean
+ *               default: true
+ *           email:
+ *               type: string
+ *               example: ad@ad.com
+ *           firstName:
+ *               type: string
+ *           lastName:
+ *               type: string
+ *           password:
+ *               type: string
+ *           creditCardNumber:
+ *               type: string
+ *               default: ''
+ *           provider:
+ *               type: string
+ *               example: local
+ *               schema:
+ *                   $ref: '#/components/schemas/Provider'
+ *           token:
+ *               type: string
+ *           role:
+ *               type: string
+ *               schema:
+ *                   $ref: '#/components/schemas/Role'
  */
 const mock: Partial<User>[] = [
     {
