# packages/service2/src/api/index.ts
@@ -1,6 +1,6 @@
 import { Router } from "express";
 import Model from "./model";
-import { removeOne } from "../utils/methods";
+import { removeOne, update } from "../utils/methods";
 
 const route = Router();
 /**
@@ -24,15 +24,18 @@ const route = Router();
  *         required: false
  *         description: Array or string with spaces projection keys to fetch
  *       - in: query
- *         name: email
+ *         name: userId
  *         type: string
- *         description: Search by email
+ *         description: Search by userId
  *     responses:
  *       200:
  *         description: A single project object
- *         schema:
- *            items:
- *              $ref: '#/definitions/Project'
+ *         content:
+ *             application/json:
+ *               type: array
+ *               schema:
+ *                 items:
+ *                   $ref: '#/components/schemas/Project'
  *       401:
  *         description: No auth token
  *       500:
@@ -44,7 +47,7 @@ route.get("/", (req, res) => {
     delete req.query.projection;
     // console.log("req.query after", req.query);
     Model.find(req.query, projection)
-        // .populate("userId", "role _id")
+        .populate("userId", "role _id")
         .then((response) => {
             res.status(200).json(response);
         })
@@ -59,8 +62,8 @@ route.get("/", (req, res) => {
  *   get:
  *     tags:
  *       - Service2
- *     name: Find service1 by id
- *     summary: Finds users information
+ *     name: Find service2 by id
+ *     summary: Finds service2 information
  *     security:
  *       - bearerAuth: []
  *     consumes:
@@ -73,11 +76,26 @@ route.get("/", (req, res) => {
  *         required: true
  *         schema:
  *           type: string
+ *       - in: query
+ *         name: projection
+ *         type: string
+ *         required: false
+ *         description: Array or string with spaces projection keys to fetch
  *     responses:
  *       200:
  *         description: A single user object
- *         schema:
- *              $ref: '#/definitions/Project'
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '#/components/schemas/Project'
+ *             example:
+ *                  {
+ *                      _id: "123",
+ *                      userId: "id1",
+ *                      isActive: true,
+ *                      name: "Name1",
+ *                      description: "Something describe item"
+ *                  }
  *       401:
  *         description: No auth token
  *       500:
@@ -103,27 +121,27 @@ route.get("/:id", (req, res) => {
  *     tags:
  *       - Service2
  *     name: Find service1 by id
- *     summary: Creates service1 information
+ *     summary: Creates service2 information
  *     security:
  *       - bearerAuth: []
  *     consumes:
  *       - application/json
  *     produces:
  *       - application/json
- *     parameters:
- *       - in: body
- *         name: body
- *         description: Pet object that needs to be added to the store
- *         required:
- *           - email
- *           - password
- *         schema:
- *            $ref: '#/definitions/Project'
+ *     requestBody:
+ *       description: Optional description in *Markdown*
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             $ref: '#/components/schemas/Project'
  *     responses:
- *       200:
+ *       201:
  *         description: A single project object
- *         schema:
- *              $ref: '#/definitions/Project'
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '#/components/schemas/Project'
  *       401:
  *         description: No auth token
  */
@@ -145,8 +163,8 @@ route.post("/", (req, res) => {
  *   delete:
  *     tags:
  *       - Service2
- *     name: Delete user by id
- *     summary: Delete user information
+ *     name: Delete service2 item by id
+ *     summary: Delete service2 information
  *     security:
  *       - bearerAuth: []
  *     consumes:
@@ -161,12 +179,49 @@ route.post("/", (req, res) => {
  *         required:
  *           - id
  *     responses:
- *       200:
+ *       202:
  *         description: A single project object
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: string
  *       401:
  *         description: No auth token
  */
 route.delete("/:id", removeOne(Model));
+
+/**
+ * @swagger
+ * /:
+ *   put:
+ *     tags:
+ *       - Service2
+ *     name: Update
+ *     summary: Update service2 information
+ *     security:
+ *       - bearerAuth: []
+ *     consumes:
+ *       - application/json
+ *     produces:
+ *       - application/json
+ *     requestBody:
+ *       description: Optional description in *Markdown*
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             $ref: '#/components/schemas/Project'
+ *     responses:
+ *       200:
+ *         description: A single project object
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '#/components/schemas/Project'
+ *       401:
+ *         description: No auth token
+ */
+route.put("/", update(Model));
 // route.delete("/", (req, res) => {
 //     res.status(200).json({
 //         message: "removed many"
